Added new infrastructure

--- a/assignment2/ConvolutionalNetworks.ipynb
+++ b/assignment2/ConvolutionalNetworks.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,6 +24,7 @@
     "import matplotlib.pyplot as plt\n",
     "from cs231n.classifiers.cnn import *\n",
     "from cs231n.classifiers.deeper_cnn import * \n",
+    "from cs231n.classifiers.deeper_cnn2 import *\n",
     "from cs231n.data_utils import get_CIFAR10_data\n",
     "from cs231n.gradient_check import eval_numerical_gradient_array, eval_numerical_gradient\n",
     "from cs231n.layers import *\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1238,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1249,138 +1250,62 @@
      "text": [
       "Deeper CNN\n",
       "We use batchnorm here\n",
-      "(Iteration 1 / 4900) loss: 2.634009\n",
-      "(Epoch 0 / 10) train acc: 0.293000; val_acc: 0.301000\n",
-      "(Iteration 21 / 4900) loss: 2.237302\n",
-      "(Iteration 41 / 4900) loss: 1.793460\n",
-      "(Iteration 61 / 4900) loss: 1.775774\n",
-      "(Iteration 81 / 4900) loss: 1.675238\n",
-      "(Iteration 101 / 4900) loss: 1.581054\n",
-      "(Iteration 121 / 4900) loss: 1.618634\n",
-      "(Iteration 141 / 4900) loss: 1.492628\n",
-      "(Iteration 161 / 4900) loss: 1.615853\n",
-      "(Iteration 181 / 4900) loss: 1.428103\n",
-      "(Iteration 201 / 4900) loss: 1.451701\n",
-      "(Iteration 221 / 4900) loss: 1.408768\n",
-      "(Iteration 241 / 4900) loss: 1.527501\n",
-      "(Iteration 261 / 4900) loss: 1.458668\n",
-      "(Iteration 281 / 4900) loss: 1.410421\n",
-      "(Iteration 301 / 4900) loss: 1.154911\n",
-      "(Iteration 321 / 4900) loss: 1.362110\n",
-      "(Iteration 341 / 4900) loss: 1.501734\n",
-      "(Iteration 361 / 4900) loss: 1.340425\n",
-      "(Iteration 381 / 4900) loss: 1.439135\n",
-      "(Iteration 401 / 4900) loss: 1.439861\n",
-      "(Iteration 421 / 4900) loss: 1.316475\n",
-      "(Iteration 441 / 4900) loss: 1.424275\n",
-      "(Iteration 461 / 4900) loss: 1.422345\n",
-      "(Iteration 481 / 4900) loss: 1.579468\n",
-      "(Epoch 1 / 10) train acc: 0.668000; val_acc: 0.673000\n",
-      "(Iteration 501 / 4900) loss: 1.299567\n",
-      "(Iteration 521 / 4900) loss: 1.510472\n",
-      "(Iteration 541 / 4900) loss: 1.339638\n",
-      "(Iteration 561 / 4900) loss: 1.445664\n",
-      "(Iteration 581 / 4900) loss: 1.384531\n",
-      "(Iteration 601 / 4900) loss: 1.271444\n",
-      "(Iteration 621 / 4900) loss: 1.410227\n",
-      "(Iteration 641 / 4900) loss: 1.261134\n",
-      "(Iteration 661 / 4900) loss: 1.227225\n",
-      "(Iteration 681 / 4900) loss: 1.315835\n",
-      "(Iteration 701 / 4900) loss: 1.441202\n",
-      "(Iteration 721 / 4900) loss: 1.139274\n",
-      "(Iteration 741 / 4900) loss: 1.349596\n",
-      "(Iteration 761 / 4900) loss: 1.225446\n",
-      "(Iteration 781 / 4900) loss: 1.260217\n",
-      "(Iteration 801 / 4900) loss: 1.220662\n",
-      "(Iteration 821 / 4900) loss: 1.518372\n",
-      "(Iteration 841 / 4900) loss: 1.306390\n",
-      "(Iteration 861 / 4900) loss: 1.244832\n",
-      "(Iteration 881 / 4900) loss: 1.235803\n",
-      "(Iteration 901 / 4900) loss: 1.443500\n",
-      "(Iteration 921 / 4900) loss: 1.243356\n",
-      "(Iteration 941 / 4900) loss: 1.351515\n",
-      "(Iteration 961 / 4900) loss: 1.202885\n",
-      "(Epoch 2 / 10) train acc: 0.689000; val_acc: 0.705000\n",
-      "(Iteration 981 / 4900) loss: 1.229459\n",
-      "(Iteration 1001 / 4900) loss: 1.298278\n",
-      "(Iteration 1021 / 4900) loss: 1.205776\n",
-      "(Iteration 1041 / 4900) loss: 1.456459\n",
-      "(Iteration 1061 / 4900) loss: 1.081336\n",
-      "(Iteration 1081 / 4900) loss: 1.108369\n",
-      "(Iteration 1101 / 4900) loss: 1.246494\n",
-      "(Iteration 1121 / 4900) loss: 1.253788\n",
-      "(Iteration 1141 / 4900) loss: 1.158662\n",
-      "(Iteration 1161 / 4900) loss: 1.421144\n",
-      "(Iteration 1181 / 4900) loss: 1.203862\n",
-      "(Iteration 1201 / 4900) loss: 1.206905\n",
-      "(Iteration 1221 / 4900) loss: 1.384885\n",
-      "(Iteration 1241 / 4900) loss: 1.231023\n",
-      "(Iteration 1261 / 4900) loss: 1.349284\n",
-      "(Iteration 1281 / 4900) loss: 1.256454\n",
-      "(Iteration 1301 / 4900) loss: 1.238406\n",
-      "(Iteration 1321 / 4900) loss: 1.259097\n",
-      "(Iteration 1341 / 4900) loss: 1.230925\n",
-      "(Iteration 1361 / 4900) loss: 1.127341\n",
-      "(Iteration 1381 / 4900) loss: 1.228764\n",
-      "(Iteration 1401 / 4900) loss: 1.289076\n",
-      "(Iteration 1421 / 4900) loss: 1.179011\n",
-      "(Iteration 1441 / 4900) loss: 1.221520\n",
-      "(Iteration 1461 / 4900) loss: 1.227277\n",
-      "(Epoch 3 / 10) train acc: 0.716000; val_acc: 0.708000\n",
-      "(Iteration 1481 / 4900) loss: 1.263984\n",
-      "(Iteration 1501 / 4900) loss: 1.276730\n",
-      "(Iteration 1521 / 4900) loss: 1.234349\n",
-      "(Iteration 1541 / 4900) loss: 1.322582\n",
-      "(Iteration 1561 / 4900) loss: 1.240150\n",
-      "(Iteration 1581 / 4900) loss: 1.267887\n",
-      "(Iteration 1601 / 4900) loss: 1.239772\n",
-      "(Iteration 1621 / 4900) loss: 1.252525\n",
-      "(Iteration 1641 / 4900) loss: 1.327559\n",
-      "(Iteration 1661 / 4900) loss: 1.393148\n",
-      "(Iteration 1681 / 4900) loss: 1.317803\n",
-      "(Iteration 1701 / 4900) loss: 1.053238\n",
-      "(Iteration 1721 / 4900) loss: 1.243045\n",
-      "(Iteration 1741 / 4900) loss: 1.320542\n",
-      "(Iteration 1761 / 4900) loss: 1.271947\n",
-      "(Iteration 1781 / 4900) loss: 1.315657\n",
-      "(Iteration 1801 / 4900) loss: 1.282871\n",
-      "(Iteration 1821 / 4900) loss: 1.500211\n",
-      "(Iteration 1841 / 4900) loss: 1.201579\n",
-      "(Iteration 1861 / 4900) loss: 1.425195\n",
-      "(Iteration 1881 / 4900) loss: 1.247356\n",
-      "(Iteration 1901 / 4900) loss: 1.132039\n",
-      "(Iteration 1921 / 4900) loss: 1.181010\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-29-6f283f6a9c79>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m                 },\n\u001b[0;32m     10\u001b[0m                 verbose=True, print_every=20)\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0msolver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m/home/revan/Desktop/CS231/assignment2/cs231n/solver.pyc\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    225\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    226\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mxrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_iterations\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 227\u001b[1;33m       \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_step\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    228\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    229\u001b[0m       \u001b[1;31m# Maybe print training loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/revan/Desktop/CS231/assignment2/cs231n/solver.pyc\u001b[0m in \u001b[0;36m_step\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    163\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    164\u001b[0m     \u001b[1;31m# Compute loss and gradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 165\u001b[1;33m     \u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrads\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    166\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloss_history\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    167\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/revan/Desktop/CS231/assignment2/cs231n/classifiers/deeper_cnn.py\u001b[0m in \u001b[0;36mloss\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    230\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muse_batchnorm\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    231\u001b[0m       conv_layer1, cache_conv_layer1 = conv_norm_relu_pool_forward(\n\u001b[1;32m--> 232\u001b[1;33m         X, W1, b1, conv_param1, pool_param1, gamma1, beta1, bn_param1)\n\u001b[0m\u001b[0;32m    233\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    234\u001b[0m       conv_layer1, cache_conv_layer1 = conv_relu_pool_forward(X, W1, b1, \\\n",
-      "\u001b[1;32m/home/revan/Desktop/CS231/assignment2/cs231n/layer_utils.py\u001b[0m in \u001b[0;36mconv_norm_relu_pool_forward\u001b[1;34m(x, w, b, conv_param, pool_param, gamma, beta, bn_param)\u001b[0m\n\u001b[0;32m    161\u001b[0m   \"\"\"\n\u001b[0;32m    162\u001b[0m   \u001b[0mconv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconv_cache\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconv_forward_fast\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconv_param\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 163\u001b[1;33m   \u001b[0mnorm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnorm_cache\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspatial_batchnorm_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbeta\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbn_param\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    164\u001b[0m   \u001b[0mrelu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelu_cache\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrelu_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    165\u001b[0m   \u001b[0mout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpool_cache\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax_pool_forward_fast\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrelu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpool_param\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/revan/Desktop/CS231/assignment2/cs231n/layers.pyc\u001b[0m in \u001b[0;36mspatial_batchnorm_forward\u001b[1;34m(x, gamma, beta, bn_param)\u001b[0m\n\u001b[0;32m    647\u001b[0m     var = (1. / (N * H * W) * np.sum((x - mu)**2,\n\u001b[0;32m    648\u001b[0m                                          axis=(0, 2, 3))).reshape(1, C, 1, 1)\n\u001b[1;32m--> 649\u001b[1;33m     \u001b[0mxhat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mmu\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0meps\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mvar\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    650\u001b[0m     \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mC\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mxhat\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbeta\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mC\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    651\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "(Iteration 1 / 490) loss: 9.121754\n",
+      "(Epoch 0 / 1) train acc: 0.245000; val_acc: 0.235000\n",
+      "(Iteration 201 / 490) loss: 2.342193\n",
+      "(Iteration 401 / 490) loss: 2.292820\n",
+      "(Epoch 1 / 1) train acc: 0.711000; val_acc: 0.659000\n",
+      "Smaller CNN\n",
+      "We use batchnorm here\n",
+      "(Iteration 1 / 490) loss: 9.233723\n",
+      "(Epoch 0 / 1) train acc: 0.263000; val_acc: 0.243000\n",
+      "(Iteration 201 / 490) loss: 1.610110\n",
+      "(Iteration 401 / 490) loss: 1.892699\n",
+      "(Epoch 1 / 1) train acc: 0.691000; val_acc: 0.669000\n",
+      "Very small CNN\n",
+      "We use batchnorm here\n",
+      "(Iteration 1 / 490) loss: 27.976363\n",
+      "(Epoch 0 / 1) train acc: 0.260000; val_acc: 0.227000\n",
+      "(Iteration 201 / 490) loss: 11.849775\n",
+      "(Iteration 401 / 490) loss: 7.077399\n",
+      "(Epoch 1 / 1) train acc: 0.581000; val_acc: 0.550000\n"
      ]
     }
    ],
    "source": [
     "print 'Deeper CNN'\n",
-    "model = DeeperCNN(weight_scale=0.001, hidden_dim=500, reg=0.07)\n",
+    "model = DeeperCNN2(weight_scale=0.001, hidden_dim=500, reg=0.03)\n",
     "\n",
     "solver = Solver(model, data,\n",
-    "                num_epochs=10,batch_size = 100,\n",
+    "                num_epochs=1,batch_size = 100,\n",
     "                update_rule='adam',\n",
     "                optim_config={\n",
     "                  'learning_rate': 3e-4,\n",
     "                },\n",
-    "                verbose=True, print_every=20)\n",
-    "solver.train()\n"
+    "                verbose=True, print_every=200)\n",
+    "solver.train()\n",
+    "\n",
+    "print 'Smaller CNN'\n",
+    "model = DeeperCNN(weight_scale=0.001, hidden_dim=500, reg=0.03)\n",
+    "solver = Solver(model, data,\n",
+    "                num_epochs=1,batch_size = 100,\n",
+    "                update_rule='adam',\n",
+    "                optim_config={\n",
+    "                  'learning_rate': 3e-4,\n",
+    "                },\n",
+    "                verbose=True, print_every=200)\n",
+    "solver.train()\n",
+    "\n",
+    "print 'Very small CNN'\n",
+    "model = ThreeLayerConvNet(weight_scale=0.001, hidden_dim=500, reg=0.03)\n",
+    "solver = Solver(model, data,\n",
+    "                num_epochs=1,batch_size = 100,\n",
+    "                update_rule='adam',\n",
+    "                optim_config={\n",
+    "                  'learning_rate': 3e-4,\n",
+    "                },\n",
+    "                verbose=True, print_every=200)\n",
+    "solver.train()"
    ]
   },
   {
